// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render SkillSection with title 1`] = `
<article
  className="skillSection"
>
  <header
    className="skillSection__header"
  >
    <h2
      className="skillSection__title"
    >
      Title!
    </h2>
  </header>
  <section
    className="skillSection__list"
    data-active={true}
  >
    <ul />
  </section>
  <footer
    className="skillSection__footer"
    data-active={true}
    onClick={[Function]}
  >
    <p
      data-active={true}
    >
      ^
    </p>
  </footer>
</article>
`;

exports[`Render SkillSection with title and skills 1`] = `
<article
  className="skillSection"
>
  <header
    className="skillSection__header"
  >
    <h2
      className="skillSection__title"
    >
      Title!
    </h2>
  </header>
  <section
    className="skillSection__list"
    data-active={true}
  >
    <ul>
      <li
        key="Skill1"
      >
        Skill1
      </li>
      <li
        key="Skill2"
      >
        Skill2
      </li>
      <li
        key="Skill3"
      >
        Skill3
      </li>
    </ul>
  </section>
  <footer
    className="skillSection__footer"
    data-active={true}
    onClick={[Function]}
  >
    <p
      data-active={true}
    >
      ^
    </p>
  </footer>
</article>
`;

exports[`Render SkillSection without props 1`] = `
<article
  className="skillSection"
>
  <header
    className="skillSection__header"
  >
    <h2
      className="skillSection__title"
    />
  </header>
  <section
    className="skillSection__list"
    data-active={true}
  >
    <ul />
  </section>
  <footer
    className="skillSection__footer"
    data-active={true}
    onClick={[Function]}
  >
    <p
      data-active={true}
    >
      ^
    </p>
  </footer>
</article>
`;
